--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "andlog": "^1.0.0",
     "async": "^0.9.0",
     "body-parser": "^1.4.3",
+    "bootstrap": "^3.2.0",
     "clientconfig": "^1.0.0",
     "compression": "^1.0.8",
     "cookie-parser": "^1.3.2",
@@ -25,6 +26,7 @@
     "getconfig": "^0.3.0",
     "helmet": "^0.3.2",
     "jade": "^1.3.1",
+    "jquery": "^2.1.1",
     "moonboots-express": "^0.1.1",
     "semi-static": "^0.0.5",
     "serve-static": "^1.3.2",
